tests/NormalTests/paczka1/fuzzy1/93101574.err
Error in line 1: UJQcJ A728 51,7
Error in line 7: H1t A728 33,4
Error in line 17: H1t S12 89,7
Error in line 21: Avm7lk S12 92,6
Error in line 23: UfCU7LSKSBa A728 75,0
Error in line 31: A663 A728 91,4
Error in line 22: Avm7lk A769 29,5
